Fixed padding on mobile

--- a/src/app/question-card/question-card.component.scss
+++ b/src/app/question-card/question-card.component.scss
@@ -58,7 +58,8 @@
         color: white;
         text-shadow: black;
         text-align: center;
-        font-size: 1.6vh;
+        font-size: 2vh;
+        margin-left: 0.1vh;
     }
 }
 
